--- a/SATapp/app/src/main/res/layout/activity_user_detail.xml
+++ b/SATapp/app/src/main/res/layout/activity_user_detail.xml
@@ -120,6 +120,7 @@
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/promote_layout"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -214,13 +215,17 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
                         android:layout_marginBottom="4dp"
+                        android:text="adghahad"
                         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                        android:textColor="@color/grey_60"
+                        android:textColor="@android:color/black"
+                        android:textSize="18sp"
                         android:visibility="invisible"
                         app:layout_constraintBottom_toBottomOf="@+id/textView10"
                         app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.0"
                         app:layout_constraintStart_toEndOf="@+id/textView10"
-                        app:layout_constraintTop_toTopOf="@+id/textView10" />
+                        app:layout_constraintTop_toTopOf="@+id/textView10"
+                        app:layout_constraintVertical_bias="1.0" />
 
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
