--- a/SATapp/app/src/main/res/layout/dialog_inventariable.xml
+++ b/SATapp/app/src/main/res/layout/dialog_inventariable.xml
@@ -37,15 +37,21 @@
             android:id="@+id/spinnerTipo"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextNombre" />
 
-        <Spinner
-            android:id="@+id/spinnerUbicacion"
-            android:layout_width="wrap_content"
+        <EditText
+            android:id="@+id/editTextUbicacion"
+            android:layout_width="0dp"
             android:layout_height="40dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
+            android:background="@color/background_grey"
+            android:ems="10"
+            android:hint="Ubicación"
+            android:paddingLeft="@dimen/margin_left_form"
+            android:inputType="textPersonName"
+            app:layout_constraintEnd_toEndOf="@+id/editTextNombre"
             app:layout_constraintStart_toStartOf="@+id/spinnerTipo"
             app:layout_constraintTop_toBottomOf="@+id/spinnerTipo" />
 
@@ -68,7 +74,7 @@
             android:id="@+id/imageViewIcon"
             android:layout_width="40dp"
             android:layout_height="35dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:padding="5dp"
             app:layout_constraintStart_toStartOf="@+id/editTextDescripcion"
             app:layout_constraintTop_toBottomOf="@+id/editTextDescripcion"
@@ -84,8 +90,8 @@
             android:hint="@string/hint_descripcion"
             android:inputType="textPersonName"
             android:paddingLeft="@dimen/margin_left_form"
-            app:layout_constraintStart_toStartOf="@+id/spinnerUbicacion"
-            app:layout_constraintTop_toBottomOf="@+id/spinnerUbicacion" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editTextUbicacion" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
