--- a/SATapp/app/src/main/res/layout/activity_register.xml
+++ b/SATapp/app/src/main/res/layout/activity_register.xml
@@ -6,4 +6,46 @@
     android:layout_height="match_parent"
     tools:context=".ui.login.RegisterActivity">
 
+    <TextView
+        android:id="@+id/textViewRegistro"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="44dp"
+        android:text="REGISTRO"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/editTextEmailRegistro"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="52dp"
+        android:ems="10"
+        android:inputType="textEmailAddress"
+        app:layout_constraintEnd_toEndOf="@+id/textViewRegistro"
+        app:layout_constraintStart_toStartOf="@+id/textViewRegistro"
+        app:layout_constraintTop_toBottomOf="@+id/textViewRegistro" />
+
+    <EditText
+        android:id="@+id/editTextPasswordRegistro"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:ems="10"
+        android:inputType="textPassword"
+        app:layout_constraintEnd_toEndOf="@+id/editTextEmailRegistro"
+        app:layout_constraintStart_toStartOf="@+id/editTextEmailRegistro"
+        app:layout_constraintTop_toBottomOf="@+id/editTextEmailRegistro" />
+
+    <Button
+        android:id="@+id/buttonRegistrarse"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="19dp"
+        android:text="Registrarme"
+        app:layout_constraintEnd_toEndOf="@+id/editTextPasswordRegistro"
+        app:layout_constraintStart_toStartOf="@+id/editTextPasswordRegistro"
+        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordRegistro" />
 </androidx.constraintlayout.widget.ConstraintLayout>
