--- a/SATapp/app/src/main/res/layout/activity_ticket_detail.xml
+++ b/SATapp/app/src/main/res/layout/activity_ticket_detail.xml
@@ -112,12 +112,42 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/spacing_medium"
-                            android:text="@string/assign"
+                            android:text="@string/create_anotation"
                             android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                             android:textColor="@color/grey_40" />
 
                     </LinearLayout>
 
+                    <LinearLayout
+                        android:id="@+id/ticket_detail_layot_tech"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                        <com.google.android.material.floatingactionbutton.FloatingActionButton
+                            android:id="@+id/ticket_assign"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:clickable="true"
+
+                            android:src="@drawable/ic_wrench"
+                            android:tint="@android:color/white"
+                            app:backgroundTint="@color/grey_90"
+                            app:elevation="0dp"
+                            app:fabSize="mini"
+                            app:rippleColor="@android:color/white" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/spacing_medium"
+                            android:text="@string/assign"
+                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
+                            android:textColor="@color/grey_40" />
+
+                    </LinearLayout>
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
