--- a/SATapp/app/src/main/res/layout/content_inventariable_detail.xml
+++ b/SATapp/app/src/main/res/layout/content_inventariable_detail.xml
@@ -287,8 +287,9 @@
                 <ListView
                     android:id="@+id/lvTicketsInventariable"
                     android:layout_width="0dp"
-                    android:layout_height="80dp"
+                    android:layout_height="250dp"
                     android:layout_marginTop="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="@+id/textViewDescription"
                     app:layout_constraintStart_toStartOf="@+id/textView7"
                     app:layout_constraintTop_toBottomOf="@+id/imageViewIconTickets" />
