--- a/SATapp/app/src/main/res/layout/activity_register.xml
+++ b/SATapp/app/src/main/res/layout/activity_register.xml
@@ -21,12 +21,12 @@
         android:id="@+id/editTextEmailRegistro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="15dp"
         android:ems="10"
         android:inputType="textEmailAddress"
-        app:layout_constraintEnd_toEndOf="@+id/textViewRegistro"
-        app:layout_constraintStart_toStartOf="@+id/textViewRegistro"
-        app:layout_constraintTop_toBottomOf="@+id/textViewRegistro" />
+        app:layout_constraintEnd_toEndOf="@+id/editTextNameRegistro"
+        app:layout_constraintStart_toStartOf="@+id/editTextNameRegistro"
+        app:layout_constraintTop_toBottomOf="@+id/editTextNameRegistro" />
 
     <EditText
         android:id="@+id/editTextPasswordRegistro"
@@ -48,4 +48,16 @@
         app:layout_constraintEnd_toEndOf="@+id/editTextPasswordRegistro"
         app:layout_constraintStart_toStartOf="@+id/editTextPasswordRegistro"
         app:layout_constraintTop_toBottomOf="@+id/editTextPasswordRegistro" />
+
+    <EditText
+        android:id="@+id/editTextNameRegistro"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
+        app:layout_constraintEnd_toEndOf="@+id/textViewRegistro"
+        app:layout_constraintStart_toStartOf="@+id/textViewRegistro"
+        app:layout_constraintTop_toBottomOf="@+id/textViewRegistro" />
 </androidx.constraintlayout.widget.ConstraintLayout>
